--- a/package.json
+++ b/package.json
@@ -3,12 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullcalendar/core": "^4.3.1",
+    "@fullcalendar/daygrid": "^4.3.0",
+    "@fullcalendar/interaction": "^4.3.0",
+    "@fullcalendar/react": "^4.3.0",
+    "@fullcalendar/timegrid": "^4.3.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/react-breadcrumbs-dynamic": "^1.0.2",
+    "bootstrap": "^4.4.1",
+    "classnames": "^2.2.6",
+    "history": "^4.10.1",
+    "moment": "^2.24.0",
+    "node-sass": "^4.13.0",
+    "postcss-loader": "^3.0.0",
     "react": "^16.12.0",
+    "react-big-calendar": "^0.23.0",
+    "react-breadcrumbs-dynamic": "^1.2.1",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "react-through": "^1.1.4",
+    "reactstrap": "^8.2.0",
+    "sass-loader": "^8.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
