--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "@trendmicro/react-sidenav": "^0.4.5",
     "@types/react-breadcrumbs-dynamic": "^1.0.2",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
@@ -20,13 +21,17 @@
     "postcss-loader": "^3.0.0",
     "react": "^16.12.0",
     "react-big-calendar": "^0.23.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-breadcrumbs-dynamic": "^1.2.1",
     "react-dom": "^16.12.0",
+    "react-router-breadcrumbs-hoc": "^3.2.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-slick": "^0.25.2",
     "react-through": "^1.1.4",
     "reactstrap": "^8.2.0",
-    "sass-loader": "^8.0.0"
+    "sass-loader": "^8.0.0",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
